--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,34 +1,19 @@
-name: Node.js Package
-
+name: Publish Package to GitHub packages
 on:
- release:
-   types: [created]
-
+  release:
+    types: [published]
 jobs:
- build:
-   runs-on: ubuntu-latest
-   steps:
-     - uses: actions/checkout@v3
-     - uses: actions/setup-node@v3
-       with:
-         node-version: 16
-     - run: npm ci
-     - run: npm test
-
- publish-gpr:
-   needs: build
-   runs-on: ubuntu-latest
-   permissions:
-     packages: write
-     contents: read
-   steps:
-     - uses: actions/checkout@v3
-     - uses: actions/setup-node@v3
-       with:
-         node-version: 16
-         registry-url: https://npm.pkg.github.com/
-     - run: npm ci
-     - run: npm run build
-     - run: npm publish
-       env:
-         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to npm
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@highcorp'
+      - run: npm ci
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
