--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "react": "^18.2.0"
   },
   "publishConfig": {
-    "@EtienneLicheron:registry": "https://npm.pkg.github.com"
+    "@etiennelicheron:registry": "https://npm.pkg.github.com"
   }
 }
