--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@etiennelicheron:registry=https://npm.pkg.github.com/
-always-auth=true
+registry=https://npm.pkg.github.com/HighCorpInc
+//npm.pkg.github.com/:_authToken=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
