--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
         node-version: '20.x'
         registry-url: https://registry.npmjs.org
         scope: '@highcorp'
+        token: ${{ secrets.NPM_TOKEN }}
     - name: Install dependencies
       run: npm ci
     - run: npm run build --if-present
