--- a/package.json
+++ b/package.json
@@ -8,16 +8,14 @@
   "files": [
     "dist"
   ],
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "build": "vite build && tsc"
   },
-
   "author": "highcorp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/HighCorpInc/Highcorp-ui.git"
+    "url": "git+https://github.com/HighCorpInc/Highcorp-ui.git"
   },
   "license": "ISC",
   "devDependencies": {
