--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@highcorp/highcorp-ui",
+  "name": "@highcorpinc/highcorp-ui",
   "version": "1.0.0",
   "description": "UI library for HighCorp",
   "main": "dist/highcorp-ui.umd.js",
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 0",
     "build": "vite build && tsc"
   },
-  "author": "highcorp",
+  "author": "highcorpinc",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HighCorpInc/Highcorp-ui.git"
@@ -29,6 +29,6 @@
     "react": "^18.2.0"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://npm.pkg.github.com"
   }
 }
