--- a/.github/workflows/deploy-github-registry.yml
+++ b/.github/workflows/deploy-github-registry.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://npm.pkg.github.com'
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN }}
           scope: '@highcorpinc'
       - name: Install Dependencies
         run: npm ci
@@ -22,4 +22,4 @@ jobs:
       - name: Publish
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.TOKEN }}
