--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "react": "^18.2.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "@highcorpinc:registry": "https://npm.pkg.github.com"
   }
 }
