--- a/.github/workflows/publish-by-push-branch.yml
+++ b/.github/workflows/publish-by-push-branch.yml
@@ -29,6 +29,8 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
       - run: npm ci
+      - run: git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      - run: git config --global user.name "github-actions[bot]"
       - run: npm version patch
       - run: npm run build
       - run: npm publish
