--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@types/react": "^18.2.64",
     "react": "^18.2.0",
     "sass": "^1.71.1",
